--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ pydantic==1.7.2
 uvicorn==0.12.2
 uvloop==0.14.0
 httptools==0.1.1
+pyyaml==5.3.1
 git+https://github.com/ranking-agent/reasoner#egg=reasoner
 git+https://github.com/TranslatorSRI/reasoner-pydantic#egg=reasoner-pydantic
