--- a/src/logging.yml
+++ b/src/logging.yml
@@ -5,11 +5,11 @@ formatters:
 handlers: 
   console: 
     class: logging.StreamHandler
-    level: DEBUG
+    level: INFO
     formatter: default
   file: 
     class: logging.handlers.RotatingFileHandler
-    level: DEBUG
+    level: INFO
     formatter: default
     filename: "../logs/aragorn.log"
     mode: a
@@ -18,7 +18,7 @@ handlers:
     backupCount: 9
 loggers:
   ranker:
-      level: DEBUG
+      level: INFO
       handlers:
         - console
         - file
