--- a/src/logging.yml
+++ b/src/logging.yml
@@ -9,7 +9,7 @@ handlers:
     formatter: default
   file: 
     class: logging.handlers.RotatingFileHandler
-    level: INFO
+    level: DEBUG
     formatter: default
     filename: "aragorn.log"
     mode: a
@@ -23,7 +23,7 @@ loggers:
         - console
         - file
   src.service_aggregator:
-      level: INFO
+      level: DEBUG
       handlers:
         - console
         - file
