--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,11 @@ notifications:
 services:
   - docker
 install:
-  - pip install tox psycopg2 python-dotenv httpx
+  - pip install tox httpx
   - mkdir logs
-  - mkdir cache
+env:
+  global:
+    - PYTHONPATH=$PWD
 script:
   - tox
 
