--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ notifications:
     - powen@renci.org
     - bizon@renci.org
 install:
+  - pip install -r ./tests/requirements.txt
   - pip install -r requirements.txt
 env:
   global:
