--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,5 @@ uvloop==0.14.0
 httptools==0.1.1
 pyyaml==5.3.1
 requests==2.25.0
-git+https://github.com/ranking-agent/reasoner#egg=reasoner
+reasoner-transpiler==1.8.1
 reasoner-pydantic==1.2.0.2
