tweking log loevels

--- a/src/logging.yml
+++ b/src/logging.yml
@@ -23,7 +23,7 @@ loggers:
         - console
         - file
   src.service_aggregator:
-      level: INFO
+      level: DEBUG
       handlers:
         - console
         - file
