--- a/requirements.txt
+++ b/requirements.txt
@@ -13,5 +13,7 @@ pyyaml==5.3.1
 pytest-asyncio==0.15.1
 httpx==0.19.0
 aio-pika
-#This is temporary until we replace the neo4j with a redis store
+redis~=3.5.3
+pamqp
+#This is only used in creating the robokop results
 neo4j
