--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,6 @@ pytest-asyncio==0.15.1
 httpx==0.19.0
 aio-pika
 redis~=3.5.3
-pamqp
+pamqp==2.3.0
 #This is only used in creating the robokop results
 neo4j
