--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,12 @@ uvloop==0.14.0
 httptools==0.1.1
 pyyaml==5.3.1
 requests==2.25.0
-reasoner-pydantic==1.2.0.4
+reasoner-pydantic==2.2.2
 pyyaml==5.3.1
 pytest-asyncio==0.15.1
 httpx==0.19.0
 aio-pika
+redis~=3.5.3
+pamqp==2.3.0
+#This is only used in creating the robokop results
+neo4j
