updating logging, aiopika

--- a/src/logging.yml
+++ b/src/logging.yml
@@ -5,7 +5,7 @@ formatters:
 handlers: 
   console: 
     class: logging.StreamHandler
-    level: INFO
+    level: DEBUG
     formatter: default
   file: 
     class: logging.handlers.RotatingFileHandler
