--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ reasoner-pydantic==2.2.2
 pyyaml==5.3.1
 pytest-asyncio==0.15.1
 httpx==0.19.0
-aio-pika
+aio-pika==8.1.1
 redis~=3.5.3
 pamqp==2.3.0
 #This is only used in creating the robokop results
