--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ httptools==0.1.1
 pyyaml==5.3.1
 requests==2.25.0
 reasoner-pydantic==2.2.2
+pamqp==3.2.0
 pyyaml==5.3.1
 pytest-asyncio==0.15.1
 httpx==0.19.0
