--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
-pytest==6.2.5
-fastapi==0.70.0
-gunicorn==20.0.4
-jsonschema==3.2.0
-pydantic>=1.8.2
-uvicorn==0.12.2
-uvloop==0.14.0
-httptools==0.1.1
-pyyaml==5.3.1
-requests==2.25.0
-reasoner-pydantic==2.2.2
-pamqp==3.2.0
-pyyaml==5.3.1
-pytest-asyncio==0.15.1
-httpx==0.19.0
+#pytest==6.2.5
+#fastapi==0.70.0
+#gunicorn==20.0.4
+#jsonschema==3.2.0
+#pydantic>=1.8.2
+#uvicorn==0.12.2
+#uvloop==0.14.0
+#httptools==0.1.1
+#pyyaml==5.3.1
+#requests==2.25.0
+#reasoner-pydantic==2.2.2
+#pamqp==3.2.0
+#pyyaml==5.3.1
+#pytest-asyncio==0.15.1
+#httpx==0.19.0
 aio-pika==8.1.1
-redis~=3.5.3
+#redis~=3.5.3
 #This is only used in creating the robokop results
-neo4j
+#neo4j
