--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ fastapi==0.70.0
 gunicorn==20.0.4
 jsonschema==3.2.0
 pydantic>=1.8.2
-uvicorn==0.12.2
+git+https://github.com/YaphetKG/uvicorn.git@master
 uvloop==0.14.0
 httptools==0.1.1
 pyyaml==5.3.1
