--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,10 @@ httpx==0.19.0
 jsonschema==3.2.0
 neo4j==5.0.1
 pamqp==3.2.0
-pytest-asyncio==0.15.1
 pydantic==1.10.2
 pytest==7.1.2
+pytest-asyncio==0.15.1
+pytest-dotenv==0.5.2
 pyyaml==6.0
 reasoner-pydantic==3.0.0
 redis~=3.5.3
