--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,7 @@ redis~=3.5.3
 requests==2.28.1
 uvicorn==0.17.6
 uvloop==0.17.0
+# open telemetry
+opentelemetry-sdk
+opentelemetry-exporter-jaeger
+opentelemetry-instrumentation-fastapi
