--- a/src/rules/rule_config.json
+++ b/src/rules/rule_config.json
@@ -4,10 +4,11 @@
     "edge_definition": { "predicate":  "biolink:treats" },
     "AMIE_inputs": [
       {
-        "input_file": "robokop_biolink3_fixed_treats_len3_correct_rules.txt",
+        "input_file": "robokop_biolink3_augmented_treats_len3_correct_rules.txt",
         "min_positive_example": 1000,
         "min_std_confidence": 0.01,
-        "max_negative_examples": 9000
+        "max_negative_examples": 9000,
+        "excluded_predicates": ["biolink:related_to", "biolink:associated_with"]
       }
     ],
     "source": "biolink:ChemicalEntity",
@@ -20,7 +21,7 @@
     "edge_definition": { "predicate":  "biolink:contraindicated_for" },
     "AMIE_inputs": [
       {
-        "input_file": "robokop_biolink3_fixed_contraindicated_for_len2_correct_rules.txt",
+        "input_file": "robokop_biolink3_augmented_contraindicated_for_len3_correct_rules.txt",
         "min_positive_example": 10,
         "min_std_confidence": 0.001,
         "max_body_size": 100000
@@ -53,7 +54,7 @@
     },
     "AMIE_inputs": [
       {
-        "input_file": "robokop_biolink3_fixed_increased_activity_len2_correct_rules.txt",
+        "input_file": "robokop_biolink3_augmented_increased_activity_len2_correct_rules.txt",
         "min_positive_example": 10,
         "min_std_confidence": 0.01,
         "max_body_size": 100000
@@ -86,7 +87,73 @@
     },
     "AMIE_inputs": [
       {
-        "input_file": "robokop_biolink3_fixed_decreased_activity_len2_correct_rules.txt",
+        "input_file": "robokop_biolink3_augmented_decreased_activity_len2_correct_rules.txt",
+        "min_positive_example": 10,
+        "min_std_confidence": 0.01,
+        "max_body_size": 100000
+      }
+    ],
+    "sort": "Std Confidence",
+    "keep": 100,
+    "source": "biolink:ChemicalEntity",
+    "target": "biolink:Gene"
+  },
+  "increases_activity_or_abundance":
+  {
+    "edge_definition": {
+      "predicate":  "biolink:affects",
+      "qualifier_constraints":
+      [
+        {
+          "qualifier_set": [
+            {
+              "qualifier_type_id": "biolink:object_aspect_qualifier",
+              "qualifier_value": "activity_or_abundance"
+            },
+            {
+              "qualifier_type_id": "biolink:object_direction_qualifier",
+              "qualifier_value": "increased"
+            }
+          ]
+        }
+      ]
+    },
+    "AMIE_inputs": [
+      {
+        "input_file": "robokop_biolink3_augmented_increased_activity_or_abundance_len2_correct_rules.txt",
+        "min_positive_example": 10,
+        "min_std_confidence": 0.01,
+        "max_body_size": 100000
+      }
+    ],
+    "sort": "Std Confidence",
+    "keep": 100,
+    "source": "biolink:ChemicalEntity",
+    "target": "biolink:Gene"
+  },
+  "decreases_activity_or_abundance":
+  {
+    "edge_definition": {
+      "predicate":  "biolink:affects",
+      "qualifier_constraints":
+      [
+        {
+          "qualifier_set": [
+            {
+              "qualifier_type_id": "biolink:object_aspect_qualifier",
+              "qualifier_value": "activity_or_abundance"
+            },
+            {
+              "qualifier_type_id": "biolink:object_direction_qualifier",
+              "qualifier_value": "decreased"
+            }
+          ]
+        }
+      ]
+    },
+    "AMIE_inputs": [
+      {
+        "input_file": "robokop_biolink3_augmented_decreased_activity_or_abundance_len2_correct_rules.txt",
         "min_positive_example": 10,
         "min_std_confidence": 0.01,
         "max_body_size": 100000
