--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,4 @@ opentelemetry-sdk==1.16.0
 opentelemetry-instrumentation-fastapi==0.37b0
 opentelemetry-exporter-jaeger==1.16.0
 opentelemetry-instrumentation-httpx==0.37b0
+fakeredis<=2.10.2
