--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ pytest-asyncio==0.15.1
 pytest-dotenv==0.5.2
 pyyaml==6.0
 reasoner-pydantic==4.1.1
-redis==4.3.4
+redis~=3.5.3
 requests==2.28.1
 uvicorn==0.17.6
 uvloop==0.17.0
@@ -20,4 +20,4 @@ opentelemetry-sdk==1.16.0
 opentelemetry-instrumentation-fastapi==0.37b0
 opentelemetry-exporter-jaeger==1.16.0
 opentelemetry-instrumentation-httpx==0.37b0
-fakeredis==2.10.2
+fakeredis<=2.10.2
