--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,23 @@
-aio-pika==8.1.1
-fastapi==0.83.0
-gunicorn==20.0.4
-httptools==0.6.0
-httpx==0.19.0
-jsonschema==3.2.0
-neo4j==5.0.1
-pamqp==3.2.0
-pydantic==1.10.2
-pytest==7.1.2
-pytest-asyncio==0.15.1
+aio-pika==9.4.2
+fastapi==0.111.1
+gunicorn==22.0.0
+httptools==0.6.1
+httpx==0.27.0
+jsonschema==4.23.0
+neo4j==5.22.0
+pamqp==3.3.0
+pydantic<=2.8.2
+pytest==8.2.2
+pytest-asyncio==0.23.8
 pytest-dotenv==0.5.2
 pyyaml==6.0.1
 reasoner-pydantic==5.0.4
 redis~=3.5.3
-requests==2.28.1
-uvicorn==0.17.6
+requests==2.32.3
+uvicorn==0.30.1
 uvloop==0.19.0
-opentelemetry-sdk==1.16.0
-opentelemetry-instrumentation-fastapi==0.37b0
-opentelemetry-exporter-jaeger==1.16.0
-opentelemetry-instrumentation-httpx==0.37b0
+opentelemetry-sdk==1.25.0
+opentelemetry-instrumentation-fastapi==0.46b0
+opentelemetry-exporter-jaeger==1.21.0
+opentelemetry-instrumentation-httpx==0.46b0
 fakeredis<=2.10.2
