--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ pytest-asyncio==0.23.8
 pytest-dotenv==0.5.2
 pyyaml==6.0.1
 reasoner-pydantic==5.0.4
-redis~=3.5.3
+redis<=5.0.7
 requests==2.32.3
 uvicorn==0.30.1
 uvloop==0.19.0
